--- a/_posts/2023-4-02-开始网页gkgy高坤高宇 .md
+++ b/_posts/2023-4-02-开始网页gkgy高坤高宇 .md
@@ -10,7 +10,7 @@ tags:
     - 随笔杂谈
 ---
 
-![]({{site.baseurl}}/img/logo.png)
+![]({{site.baseurl}}/img/logo.jpg)
 
 #### 网站介绍
 
@@ -20,9 +20,10 @@ tags:
 然后我想把我的所思所想写进去，互惠互利，万物共生。
 
 我要给你提供的
-1.资源
-2.信息差
-3.软件使用方法
+ 
+    1.资源
+    2.信息差
+    3.软件使用方法
 
 
 发布媒体：
